5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1644_2445.log
== TEST (2019-04-11 15:35:16) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = 5/9 * (t - 32)
	print(c)
else:
	c = 5/9 * (t + 32) 
	print(c)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:35:24) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = 5/9 * (t - 32)
	print(c)
else:
	c = 5/9 * (t + 32) 
	print(c)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:35:57) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = 5/9 * (t - 32)
	print(c)
else:
	c = 5/9 * (t + 32) 
	print(c)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:35:58) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = 5/9 * (t - 32)
	print(c)
else:
	c = 5/9 * (t + 32) 
	print(c)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:37:10) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = (5/9) * (t - 32)
	print(round(c,2))
else:
	c = 5/9 * (t + 32) 
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:37:43) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = (5/9) * (t - 32)
	print(round(c,2))
else:
	c = 5/9 * (t + 32) 
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:55:15) 
-- CODE:
q = input()
t = float(input())

if(q=="C"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	c = 5/9 * (t + 32) 
	print(round(c,2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:58:49) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f = (t*(5/9) )/32  
	print(round(f,2))
-- OUTPUT:
5.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:59:05) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f = (t*(5/9) )/32  
	print(round(f,2))
-- OUTPUT:
5.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:59:19) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f = (t*(5/9) )/32  
	print(round(f,2))
-- EXECUTION TIME:
0.221855
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
5.56
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:59:22) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f = (t*(5/9) )/32  
	print(round(f,2))
-- OUTPUT:
5.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:02:47) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:03:02) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.143409
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:32:36) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.149715
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:33:42) 
-- CODE:
q = input(
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.16839
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 4
    if(q=="F"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:33:49) 
-- CODE:
q = input()
t = float(input())

if(q=="F"):
	c = 5/9 * (t - 32)
	print(round(c,2))
else:
	f =  (t * 1.8) + 32 
	print(round(f,2))
-- EXECUTION TIME:
0.195225
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
